...
                            ),
                            child: child,
                          ),
                        );
                      },
                      child: TextFormField(
                        key: const ValueKey('login_email_field'),
                        controller: _emailController,
                        focusNode: _focusEmail,
                        decoration: InputDecoration(
                          labelText: AppLocalizations.of(
                            context,
                          ).translate('email'),
...
                            ),
                            child: child,
                          ),
                        );
                      },
                      child: TextFormField(
                        key: const ValueKey('login_password_field'),
                        controller: _passwordController,
                        focusNode: _focusPassword,
                        decoration: InputDecoration(
                          labelText: AppLocalizations.of(
                            context,
                          ).translate('password'),
...
